# 5FAndroid

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
SmartEye/: build.gradle  plugin_make.bat  proguard-rules.pro  system.keystore
SmartEye/sign/: READ.txt  platform.pk8  platform.x509.pem  sign.sh
SmartEye/src/main/: AndroidManifest.xml
SmartEye/src/main/cpp/: CMakeLists.txt  JNISmartEye.cpp
SmartEye/src/main/cpp/BaseLayer/JpegWrapper/: CMakeLists.txt  Readme.md
SmartEye/src/main/cpp/BaseLayer/JpegWrapper/Export_Inc/: IDecoder.h  IEncoder.h  JpgUtil.h  jpegYuv420.h
SmartEye/src/main/cpp/BaseLayer/JpegWrapper/Source/: HardDecoder.cpp  HardDecoder.h  HardEncoder.cpp  HardEncoder.h  JpgUtil.cpp  SoftDecoder.cpp  SoftDecoder.h  SoftEncoder.cpp  SoftEncoder.h
SmartEye/src/main/cpp/Communication/: CMakeLists.txt
SmartEye/src/main/cpp/Communication/Source/: Communication.cpp  DataWrapper.cpp  TcpServerImp.cpp
SmartEye/src/main/cpp/Communication/headers/: CommonMacro.h  Communication.h  DataWrapper.h  TcpServerImp.h
SmartEye/src/main/cpp/ThirdPartyLib/: CMakeLists.txt  Empty.cpp
SmartEye/src/main/cpp/ThirdPartyLib/Common/Export_Inc/: CommonMacro.h
SmartEye/src/main/cpp/ThirdPartyLib/HPSocket/: CMakeLists.txt
SmartEye/src/main/cpp/ThirdPartyLib/HPSocket/include/hpsocket/: HPTypeDef.h
SmartEye/src/main/cpp/ThirdPartyLib/Wgs2gcj/: CMakeLists.txt  Readme.md
SmartEye/src/main/cpp/ThirdPartyLib/Wgs2gcj/Export_Inc/: wgs2gcj.h
SmartEye/src/main/cpp/ThirdPartyLib/libjpeg-turbo/: CMakeLists.txt  Readme.md
SmartEye/src/main/cpp/entity/: BaseTXData.h  DataTypeDefine.h  EnumImage.h  EnumVIOStatus.h  EnumYGISaveType.h  GpsUblox.h  RoadDisease.h  SmartFrame.h  SmartGPS.h  SmartIMU.h  TSRResult.h  TX2Version.h  VIOResult.h  YGIData.h
SmartEye/src/main/cpp/headers/: CxxCallJavaHelper.h  EncodeFrame2Jpeg.h  Log.h
SmartEye/src/main/cpp/headers/interface/: DataExchange.h  DataExchangeReader.cpp  DataExchangeReader.h  HDClient.h  HDErrortype.h  MainControl.h  common.h
SmartEye/src/main/cpp/headers/receiver/: DataReceiver.h  DataReceiverHighMonitor.h
SmartEye/src/main/cpp/sources/: CxxCallJavaHelper.cpp  DataReceiver.cpp  DataReceiverHighMonitor.cpp  EncodeFrame2Jpeg.cpp
SmartEye/src/main/java/com/autonavi/smarteye/: ActiveTasks.java  App.java  BootReceiver.java  MainActivity.java  NetUtils.java  SmartEye.java
SmartEye/src/main/java/com/autonavi/smarteye/config/: Config.java
SmartEye/src/main/java/com/autonavi/smarteye/service/: DataLoader.java  DataSender.java
SmartEye/src/main/java/com/autonavi/smarteye/service/http/: HttpCallback.java  HttpClient.java
SmartEye/src/main/java/com/autonavi/smarteye/util/: SDCardTool.java
SmartEye/src/main/java/com/autonavi/smarteye/util/filename/: TimeUpdater.java
SmartEye/src/main/java/com/autonavi/smarteye/util/imgupload/: MarkedFolderMonitor.java  MarkedUploadManager.java  OriginalFolderMonitor.java  OriginalUploadManager.java
SmartEye/src/main/java/com/autonavi/smarteye/util/sdcard/: SDCardTool.java
SmartEye/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
